# scirust

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.txt  buildlog.txt  index.html
doc/: search-index.js
doc/scirust/: index.html  sidebar-items.js  stability.html  stability.json
doc/srmat/: index.html  stability.html  stability.json  struct.Mat.html  struct.Matrix.html  trait.MatrixMul.html  type.MatF64.html  type.MatI64.html  type.MatrixF64.html  type.MatrixI64.html
scirust/: Cargo.toml
scirust/src/: api.rs  lib.rs
sralgebra/: Cargo.toml
sralgebra/src/: commutative_ring.rs  complex.rs  field.rs  group.rs  integral_domain.rs  lib.rs  loop_.rs  monoid.rs  ops.rs  quasigroup.rs  ring.rs  semigroup.rs
sralgorithm/: Cargo.toml
sralgorithm/benches/: example.rs
sralgorithm/src/: lib.rs
src/: api.rs  discrete.rs  entry.rs  error.rs  intro.md  lib.rs  main.rs  matelt.rs  materr.rs  matiter.rs  matrix.rs  matview.rs  number.rs
src/alg/: mod.rs
src/algebra/: commutative_ring.rs  complex.rs  entry.rs  field.rs  group.rs  integral_domain.rs  lattice.rs  loop_.rs  magma.rs  mod.rs  monoid.rs  number.rs  one.rs  ops.rs  properties.rs  quasigroup.rs  ring.rs  semigroup.rs  signed.rs
src/discrete/: mod.rs  modular.rs  permutations.rs
src/dx/: mod.rs
src/linalg/: det.rs  error.rs  gauss_elim.rs  inverse.rs  linear_system.rs  lu.rs  mod.rs  rank.rs  singularity.rs
src/matrix/: README.md  constructors.rs  element.rs  error.rs  iter.rs  matrix.rs  matrix_conversion.rs  matrix_extraction.rs  matrix_minmax.rs  mod.rs  random.rs  special.rs  testdata.rs  traits.rs  triangular_matrix.rs  vector.rs  view.rs  view_conversion.rs  view_minmax.rs
src/number/: complex.rs  entry.rs  field.rs  group.rs  loop_.rs  magma.rs  mod.rs  monoid.rs  number.rs  one.rs  ops.rs  properties.rs  (+4 more)
srdiscrete/: Cargo.toml
srdx/: Cargo.toml
srimage/: README.md
srinterp/: Cargo.toml
srlinalg/: Cargo.toml
srlinalg/src/: README.md  api.rs  det.rs  inverse.rs  lib.rs  linear_system.rs  lu.rs  rank.rs  singularity.rs
srlinalg/src/matrix/: mat_impl.rs  mat_traits.rs
srlinalg/src/testdata/: mod.rs
srlinalg/src/testdata/matrix/: simple.rs
srmatrix/: Cargo.toml
srnum/: Cargo.toml
sropt/: Cargo.toml
srsignal/: Cargo.toml
srstat/: Cargo.toml
util/: Cargo.toml
(+767 files in other folders)
