[package]

name = "scirust"
version = "0.0.3"
authors = ["Shailesh Kumar <shailesh@indigits.com>"]
description="A scientific computing library"
documentation="http://www.rust-ci.org/indigits/scirust/doc/scirust/"
readme="./README.md"
keywords=["math", "linear-algebra", "statistics", "matrix"]
license="Apache-2.0"


[dependencies]
log = "0.2.4"
rand = "0.1.3"

[[bin]]

name = "scirust_main"
doc = false
